# galaxi

./: .gitignore  AppImageBuilder.yml  AppRun.sh  CONVERSION_SUMMARY.md  README.md  galaxi.desktop  pubspec.yaml  start-galaxi.sh
.github/workflows/: appimage-release.yml  build.yml  release.yml
appimage/: AppImageBuilder.yml  AppRun.sh
integration_test/: simple_test.dart
lib/: main.dart
lib/src/: constants.dart
lib/src/backend/: api.dart  client.dart  dto.dart
lib/src/pages/: game_page.dart  home_page.dart  library_page.dart  login_page.dart  pages.dart  settings_page.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/widgets/: install_button.dart  widgets.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: account.rs  config.rs  database.rs  download.rs  dto.rs  error.rs  game.rs  gog_api.rs  installer.rs  launcher.rs  mod.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_minigalaxy_flutter.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_minigalaxy_flutter.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
typescript/: .gitignore  BUILD.md  README.md  package-lock.json  package.json  start.sh  tsconfig.json
typescript/src/: index.ts  server.ts
typescript/src/api/: account.ts  config.ts  database.ts  download.ts  dto.ts  error.ts  game.ts  gog_api.ts  installer.ts  simple.ts  (+1 more)
(+7 files in other folders)
